# agent_tracking

./: CMakeLists.txt  fix_pixci_drivers
catchtests/: camera_array.cpp  performance.cpp  tracking_service.cpp
config/: EPIX_IR.fmt  EPIX_IR2.fmt  EPIX_IRbest.fmt  EPIX_experiment.fmt  EPIX_lights_off.fmt  EPIX_lights_on.fmt  associations.config  camera_order.config  key_points.config  profiles.config
include/: agent_tracking.h  agent_tracking_service.h  background.h  camera_array.h  classifier.h  client.h  frame_rate.h  input_handler.h  layouts.h  mask.h  message.h  time_stamp.h
include/agent_tracking/: background.h  camera_array.h  client.h  cv_service.h  frame_rate.h  layouts.h  message.h  service.h  time_stamp.h  tracking_client.h  tracking_service.h
python/: __info__.py  agent_tracking.py  agent_tracking_py_setup.py  build.py  install_cellworld_py.py  tests.py
python/agent_tracking_py/: __init__.py  __version__.py  agent_tracking.py  version.py
python/examples/: demo1.py
python/setup/: setup.cfg  setup.py
python/src/: __init__.py  agent_tracking.py  tracking_client.py  tracking_service.py
src/: agent_tracking.cpp  agent_tracking_service.cpp  background.cpp  camera_array.cpp  client.cpp  cv_service.cpp  frame_rate.cpp  input_handler.cpp  layouts.cpp  mask.cpp  service.cpp  time_stamp.cpp  tracking_client.cpp  tracking_service.cpp
src/tools/: agent_tracker.cpp  sim_episode.cpp
tools/: agent_tracker.cpp  capture.cpp  robot_controller.cpp  sim_episode.cpp  speed_test.cpp
tools/robot_controller/: robot_controller.cpp
tools/robot_controller/include/: controller.h  joystick.h  ptcp.h
tools/robot_controller/src/: controller.cpp  joystick.cpp  ptcp.cpp  robot_controller.cpp
